<resources>
    <string name="app_name">Neil\'s Record Keeper</string>
    <string name="running">Running</string>
    <string name="cycling">Cycling</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="running_text">Running</string>
    <string name="running_image_alt_desc">Running Image</string>
    <string name="_5km">5km</string>
    <string name="_10km">10km</string>
    <string name="half_marathon">21km</string>
    <string name="full_marathon">42km</string>
    <string name="cycling_image_alt_desc">Cycling Image</string>
    <string name="cycling_text">Cycling</string>
    <string name="longest_ride">Longest \nRide</string>
    <string name="biggest_climb">Biggest \nClimb</string>
    <string name="best_average_speed">Best Average \nSpeed</string>
    <string name="runnable_record_text">meh meh</string>
    <string name="reset_running_records">Reset Running Records</string>
    <string name="reset_cycling_records">Reset Cycling Records</string>
    <string name="reset_all_records">Reset All records</string>
    <string name="cycling_runnable">Cycling meh meh</string>
    <string name="record_hint">Record</string>
    <string name="date_hint">Date</string>
    <string name="save_text">Save</string>
    <string name="clear_record_text">Clear Record</string>
</resources>