<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frame_heading"
            android:layout_width="0dp"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            >

            <ImageView
                android:id="@+id/frame_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/cycling_image_alt_desc"
                android:scaleType="centerCrop"
                android:src="@drawable/bike_heading">

            </ImageView>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_overlay">

            </View>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/cycling_text"
                android:textColor="@color/white"
                android:textSize="24sp"

                >

            </TextView>

        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frame_heading"

            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_longest_ride"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"

                >

                <TextView

                    android:id="@+id/text_view_longest_ride_heading"
                    style="@style/RecordNameTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longest_ride"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

                <TextView
                    android:id="@+id/text_view_longest_ride_value"
                    style="@style/RecordValueTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="22:04">

                </TextView>

                <TextView
                    android:id="@+id/text_view_longest_ride_date"
                    style="@style/RecordDateTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_longest_ride_value"
                    tools:text="29/11/2020">

                </TextView>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/light_gray">

            </View>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_biggest_climb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="12dp">

                <TextView

                    android:id="@+id/text_view_biggest_climb_heading"
                    style="@style/RecordNameTextAppearance"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:text="@string/biggest_climb"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

                <TextView
                    android:id="@+id/text_view_biggest_climb_value"
                    style="@style/RecordValueTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="22:04">

                </TextView>

                <TextView
                    android:id="@+id/text_view_biggest_climb_date"
                    style="@style/RecordDateTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_biggest_climb_value"
                    tools:text="29/11/2020">

                </TextView>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/light_gray">

            </View>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_best_average_spd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="12dp">

                <TextView

                    android:id="@+id/text_view_best_average_spd_heading"
                    style="@style/RecordNameTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best_average_speed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

                <TextView
                    android:id="@+id/text_view_best_average_spd_value"
                    style="@style/RecordValueTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="22:04">

                </TextView>

                <TextView
                    android:id="@+id/text_view_best_average_spd_date"
                    style="@style/RecordDateTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_best_average_spd_value"
                    tools:text="29/11/2020">

                </TextView>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>

